syntax = "proto3";

package io.xpring;

option java_multiple_files = true;
option java_outer_classname = "GetTransactionStatusRequestProto";
option java_package = "io.xpring.proto";

// A request for the status of a transaction on the XRP Ledger.
// Next field: 2
message GetTransactionStatusRequest {
  // The hash of the transaction to retrieve.
  string transaction_hash = 1;
}
